<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.surftools</groupId>
	<artifactId>wimp</artifactId>
	<version>2.0.0</version>

	<name>Wimp-TLG</name>
	<url>http://maven.apache.org</url>

	<properties>
  		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<java.version>22</java.version>
		<maven.compiler.plugin.version>3.3</maven.compiler.plugin.version>
		<maven.appassembler.plugin.version>1.10</maven.appassembler.plugin.version>

		<args4j.version>2.33</args4j.version>
		<jackson.version>2.13.1</jackson.version>
		<commons.codec.version>1.15</commons.codec.version>
		<commons.email.version>1.5</commons.email.version>
		<logback.version>1.2.7</logback.version>
		<opencsv.version>5.5</opencsv.version>
		<pdfbox.version>3.0.3</pdfbox.version>
		<itextpdf.version>5.5.13.4</itextpdf.version>
		<string.similarity.version>2.0.0</string.similarity.version>
		<stanford.nlp.version>4.5.6</stanford.nlp.version>
		<junit.version>4.13.1</junit.version>
	</properties>

	<dependencies>

		<dependency>
		    <groupId>commons-codec</groupId>
		    <artifactId>commons-codec</artifactId>
		    <version>${commons.codec.version}</version>
		</dependency>

		<dependency>
		  <groupId>org.apache.commons</groupId>
		  <artifactId>commons-email</artifactId>
		  <version>${commons.email.version}</version>
		</dependency>

		<dependency>
			<groupId>org.apache.pdfbox</groupId>
			<artifactId>pdfbox</artifactId>
			<version>${pdfbox.version}</version>
		</dependency>

		<dependency>
			<groupId>com.itextpdf</groupId>
			<artifactId>itextpdf</artifactId>
			<version>${itextpdf.version}</version>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>${jackson.version}</version>
		</dependency>
			
		<dependency>
			<groupId>args4j</groupId>
			<artifactId>args4j</artifactId>
			<version>${args4j.version}</version>
		</dependency>

		<dependency>
			<groupId>com.opencsv</groupId>
			<artifactId>opencsv</artifactId>
			<version>${opencsv.version}</version>
		</dependency>
		
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>${logback.version}</version>
		</dependency>

		<dependency>
			<groupId>info.debatty</groupId>
			<artifactId>java-string-similarity</artifactId>
			<version>${string.similarity.version}</version>
		</dependency>

		<!--
		<dependency>
            <groupId>edu.stanford.nlp</groupId>
            <artifactId>stanford-corenlp</artifactId>
            <version>${stanford.nlp.version}</version>
        </dependency>

        <dependency>
            <groupId>edu.stanford.nlp</groupId>
            <artifactId>stanford-corenlp</artifactId>
            <version>${stanford.nlp.version}</version>
            <classifier>models</classifier>
        </dependency>
		-->

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven.compiler.plugin.version}</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>

			<!-- mvn package -DskipTests=true -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>appassembler-maven-plugin</artifactId>
				<version>${maven.appassembler.plugin.version}</version>

				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>assemble</goal>
						</goals>
					</execution>
				</executions>

				<configuration>
					<extraJvmArguments>
						-DLogback.debug=false
						-Dlogback.statusListenerClass=ch.qos.logback.core.status.NopStatusListener
					</extraJvmArguments>
					<configurationSourceDirectory>src/main/resources/conf</configurationSourceDirectory>
					<configurationDirectory>conf</configurationDirectory>
					<copyConfigurationDirectory>true</copyConfigurationDirectory>
					<includeConfigurationDirectoryInClasspath>true</includeConfigurationDirectoryInClasspath>
					<platforms>
						<platform>all</platform>
					</platforms>					
					<programs>
						<program>
							<mainClass>com.surftools.winlinkMessageMapper.tool.WinlinkMessageMapper</mainClass>
							<id>wimp</id>
						</program>
						<program>
						<mainClass>com.surftools.winlinkMessageMapper.tool.P2PMapper</mainClass>
							<id>pimp</id>
						</program>
					</programs>
				</configuration>
			</plugin>
		</plugins>

		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>

				<includes>
					<include>**/*.xml</include>
					<include>**/*.properties</include>
					<include>templates</include>
					<include>**/*.csv</include>
				</includes>
				

			</resource>
		</resources>

		<testResources>
			<testResource>
				<directory>src/test/resources</directory>
				<filtering>true</filtering>
				<includes>
					<include>**/*.xml</include>
					<include>**/*.properties</include>				
				</includes>
			</testResource>
		</testResources>
	</build>
</project>
